# ApplicationAgent

./: .env.example  .gitignore  API_DOCUMENTATION.md  BROWSER_EXTENSION_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  QUICK_START.md  README.md  SETUP_GUIDE.md  USAGE_GUIDE.md  analyze_job_form.py  claude_desktop_config.json  customize_profile.py  demo_job_analyzer.py  install.sh  pyproject.toml  run_server.py  setup.py  setup_profile.py  test_basic.py  test_real_job_form.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
JobApplicationAgent/: .env  .env.example  claude_desktop_config.json  requirements.txt  test_basic.py  test_semantic_matching.py
JobApplicationAgent/config/: ai_providers.json
JobApplicationAgent/data/profiles/: sample_profile.json
JobApplicationAgent/src/: cli.py
browser_extension/: README.md  manifest.json
browser_extension/background/: api_manager.js  background.js
browser_extension/content_scripts/: form_detector.js  form_filler.js  overlay.css  ui_overlay.js
browser_extension/popup/: popup.css  popup.html  popup.js  setup.css  setup.html  setup.js
config/: ai_providers.json  field_patterns.json  response_templates.json  validation_rules.json
config/prompts/: field_matching.txt  form_analysis.txt  response_generation.txt
data/profiles/: profile_3235.json  profile_7103.json  profile_9645.json  sample_profile_001.json  sanket_muchhala_profile.json
data/test/: test_item.json
demo_samples/: sample_job_form_startup.html  sample_job_form_tech.html
src/: __init__.py  cli.py  server.py
src/job_application_agent.egg-info/: PKG-INFO  entry_points.txt
src/models/: __init__.py
src/services/: __init__.py  ai_service.py  basic_matching_service.py  deepseek_service.py  form_analyzer.py  local_service.py  profile_manager.py  response_generator.py  semantic_matcher.py  validator.py
src/utils/: __init__.py  encryption.py  paths.py
(+17 files in other folders)
